MONGO_URI uncommented

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ SECRET_VERIFY=bx-qa)sd9ji9jnsdo87hsasds(71(@%*9l%asdad
 SECRET_FORGOT=wewqewqewqeqw(@%*9l%asdadbx-qa)sd9ji9jnsdo87hsasds(
 PORT=3000
 NODE_VERSION=“16.16.0”
-# MONGO_URI=mongodb+srv://rahilansari261:saqckd4WdHG4Dxy@taskmanagercluster.7zkkoul.mongodb.net/invoice?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://rahilansari261:saqckd4WdHG4Dxy@taskmanagercluster.7zkkoul.mongodb.net/invoice?retryWrites=true&w=majority
