--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^5.6.0",
     "mongoose": "^5.11.10",
     "password-hash": "^1.2.2"
   },
